<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ICare</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="colon"> : </string>

    <!-- iCare final project -->
    <string name="emcall">Emergency Call</string>
    <string name="call">Call</string>
    <string name="viewno">View Number</string>
    <string name="changeno">Change Number</string>
    <string name="profile">\'s Profile</string>
    <string name="username">Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="bd">Date of Birth</string>
    <string name="age">Age</string>
    <string name="ht">Height</string>
    <string name="wt">Weight</string>
    <string name="specialinfo">Special Information</string>
    <string name="dietchart">Diet Chart</string>
    <string name="alldiet">All Diet Chart</string>
    <string name="viewall">View All</string>
    <string name="vccchart">Vaccine Chart</string>
    <string name="docprofile">Doctors Profile</string>
    <string name="mdhis">Medical History</string>
    <string name="gallery">Gallery</string>
    <string name="carecenter">Care Center</string>
    <string name="editpro">Update Profile</string>
    <string name="deletepro">Delete Profile</string>
    <string name="addnew">Add New</string>
    <string name="vcc">Vaccinations</string>
    <string name="home">Home</string>
    <string name="date">Date</string>
    <string name="note">Note</string>
    <string name="createpro">Create Profile</string>
    <string name="photo">Take Photo</string>
    <string name="save">Save</string>
    <string name="specialist">Specialist</string>
    <string name="address">Address</string>
    <string name="phone">Mobile</string>
    <string name="email">Email</string>
    <string name="creatediet">Create Diet Chart</string>
    <string name="feast">Feast</string>
    <string name="time">Time</string>
    <string name="menu">Menu</string>
    <string name="alarm">Alarm</string>
    <string name="weekly">Weekly Plan</string>
    <string name="createvcc">Create vaccination chart</string>
    <string name="vccname">Vaccination Name</string>
    <string name="reason">Reason</string>
    <string name="sugg">Suggestion</string>
    <string name="uppescrip">Upload Prescription</string>
    <string name="sms">SMS</string>
    <string name="appoint">Appointment</string>
    <string name="setappoint">Set Appointment</string>
    <string name="setnewappoint">Set New Appointment</string>
    <string name="location">Location</string>
    <string name="remainingvcc">Remaining Vaccination</string>
    <string name="takenvcc">Vaccination Already Taken</string>
    <string name="center">Center</string>
    <string name="today">Today\'s Diet Chart</string>
    <string name="summery">Summery</string>
    <string name="docname">Doctor\'s Name</string>
    <string name="healthinfo">General Health Information</string>
    <string name="vaccinfo">General Vaccination Information</string>
    <string name="growthinfo">General Growth Information</string>
    <string name="nutritioninfo">General Nutrition Information</string>
    <string name="impnote">Important Notes</string>
    <string name="addnote">Add Notes</string>
    <string name="aboutus">About Us</string>
    <string name="setting">Settings</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>General Health Information</item>
        <item>General Vaccination Information</item>
        <item>General Growth Information</item>
        <item>General Nutrition Information</item>
        <item>Important Date and Note</item>
        <item>About Us</item>
        <item>Settings</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/home</item>
        <item>@drawable/healthinfo</item>
        <item>@drawable/vccinfo</item>
        <item>@drawable/growthinfo</item>
        <item>@drawable/nutrition</item>
        <item>@drawable/impnote</item>
        <item>@drawable/aboutus</item>
        <item>@drawable/settings</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="camerachack">Sorry! Your device doesn\'t support camera</string>
    <string name="imagecaptured">Image Captured</string>
    <string name="imagecancled">cancelled image capture</string>
    <string name="imagefailed">Sorry! Failed to capture image</string>
    <string name="complete">Please Complete All Field</string>
    <string name="takephoto">Please Take Photo</string>
    <string name="insert">Successfully Data Inserted</string>
    <string name="update">Successfully Data Updated</string>    
    <string name="datadelete">Successfully Data Deleted</string>
    <string name="fail">Sorry! Data Insertion Failed</string>
    <string name="miss">Do You Miss Something ! </string>
    <string name="invalide">Invalide Email Address ! Please Check Again</string>
    <string name="correctnum">Please Enter Mobile Number Correctly </string>
    <string name="docappoint">Please Select Your Appointment Date and Time</string>
    <string name="deletealart">Are You Sure ?</string>
    <string name="deletemsg">Profile Deleted</string>
    <string name="deletenote">Note Deleted</string>
    <string name="comment">This is a static page. Related general information will be provided.</string>
    <string name="gps">GPS signal not found</string>
    <string name="map">Sorry! unable to create maps</string>
    <string name="splfooter">Copyright@2015Bangladesh</string>    
    <string name="spltitle">For Precious Family</string>
    <string name="Author">Author :</string>
    <string name="Developer">Developer :</string>
    <string name="Aboutapp">About App :</string>

</resources>