<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/aboutus"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#0000cc" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Author"
        android:textStyle="bold"
        android:layout_margin="20dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Developer"
        android:textStyle="bold"
        android:layout_margin="20dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Aboutapp"
        android:textStyle="bold"
        android:layout_margin="20dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000" />
    

</LinearLayout>