<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/vcc"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#0000cc" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/remainingvcc"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#009999" />

    <ListView
        android:id="@+id/remainingvcclist"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_margin="20dp"
        android:background="#d6f7da" >
    </ListView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/takenvcc"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#009999" />

    <ListView
        android:id="@+id/takenvcclist"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_margin="20dp"
        android:background="#f7efd6" >
    </ListView>

</LinearLayout>